Fix Celerity / Gradation Vertical being too narrow
Our desired content width is 64em. Unfortunately in Celerity / Gradation
Vertical, the sidebar is counted in the 64em, making the actual content
much narrower.

--- a/htdocs/scss/foundation/_settings.scss
+++ b/htdocs/scss/foundation/_settings.scss
@@ -81,7 +81,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-$row-width: 64em;
+$row-width: 64em !default;
 // $total-columns: 12;
 // $column-gutter: rem-calc(30);
 
